--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,6 +1,48 @@
-
 .wrapper {
     width: 80%;
     margin: 0 auto;
     max-width: 1000px;
+}
+
+.nav-bar {
+    width: 100%;
+    height: 100px;
+    background: #444;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.nav-logo {
+    width: 60px;
+    height: 60px;
+    margin-left: 60px;
+    margin-right: auto;
+    border-radius: 30px;
+
+    background: grey;
+}
+
+.nav-links {
+    margin-right: 60px;
+    align-self: center;
+
+    a {
+        font-size: 1.1em;
+        text-decoration: none;
+        color: white;
+    }
+}
+
+.main-site-header {
+    width: 100%;
+    height: 400px;
+    background: lightgrey;
+
+    h1 {
+        margin: 0;
+        font-size: 2.5em;
+        padding-top: 150px;
+    }
 }
