Layout the footer and the add social media links to it

--- a/css/app.css
+++ b/css/app.css
@@ -1,44 +1,64 @@
 .wrapper {
-    width: 80%;
-    margin: 0 auto;
-    max-width: 1000px;
-}
-  
+  width: 80%;
+  margin: 0 auto;
+  max-width: 1000px; }
+
 .nav-bar {
-    width: 100%;
-    height: 100px;
-    background: #444;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-  
+  width: 100%;
+  height: 100px;
+  background: #444;
+  display: flex;
+  flex-direction: row;
+  align-items: center; }
+
 .nav-logo {
-    width: 60px;
-    height: 60px;
-    margin-left: 60px;
-    margin-right: auto;
-    border-radius: 30px;
-    background: grey;
-}
-  
+  width: 60px;
+  height: 60px;
+  margin-left: 60px;
+  margin-right: auto;
+  border-radius: 30px;
+  background: grey; }
+
 .nav-links {
-    margin-right: 60px;
-    align-self: center;
-}
-.nav-links a {
+  margin-right: 60px;
+  align-self: center; }
+  .nav-links a {
     font-size: 1.1em;
     text-decoration: none;
-    color: white;
-}
-  
+    color: white; }
+
 .main-site-header {
-    width: 100%;
-    height: 400px;
-    background: lightgrey;
-}
-.main-site-header h1 {
+  width: 100%;
+  height: 400px;
+  background: lightgrey; }
+  .main-site-header h1 {
     margin: 0;
     font-size: 2.5em;
-    padding-top: 150px;
-}
+    padding-top: 150px; }
+
+footer {
+  width: 100%;
+  height: 100px;
+  background: #444;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end; }
+  footer ul {
+    list-style: none;
+    display: flex;
+    justify-content: flex-end; }
+    footer ul li {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-left: 15px;
+      width: 60px;
+      height: 60px;
+      border-radius: 30px;
+      background: grey;
+      text-align: center; }
+      footer ul li a {
+        padding: 10px;
+        font-size: 30px;
+        color: white; }
