--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,4 +1,8 @@
 @import './base/variables.scss';
+@import './base/mixins.scss';
+
+
+@import './components/footer.scss';
 
 
 .wrapper {
@@ -50,40 +54,6 @@
     }
 }
 
-footer {
-    width: 100%;
-    height: 100px;
-    background: #444;
-
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-end;
-
-    ul {
-        list-style: none;
-        display: flex;
-        justify-content: flex-end;
-
-        li {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-left: 15px;
-            width: 60px;
-            height: 60px;
-            border-radius: 30px;
-            background: grey;
-            text-align: center;
-
-            a {
-                padding: 10px;
-                font-size: 30px;
-                color: white;
-            }
-        }
-    }
-}
 
 ///// Mix-ins /////
 //-- Takes in the gradient's degree, the percentage of the background image where
