refactored some components

--- a/sass/components/footer.scss
+++ b/sass/components/footer.scss
@@ -1,9 +1,8 @@
 footer {
+    display: flex;
     width: 100%;
     height: 100px;
-    background: #444;
-
-    display: flex;
+    background: $text-color;
     flex-direction: row;
     align-items: center;
     justify-content: flex-end;
@@ -21,14 +20,20 @@ footer {
             width: 60px;
             height: 60px;
             border-radius: 30px;
-            background: grey;
             text-align: center;
 
             a {
                 padding: 10px;
                 font-size: 30px;
-                color: white;
+                color: $background-color;
+                transition: 0.3s;
+                
+                &:hover {
+                    color: $accent-color;
+                    transform: scale(1.2);
+                }
             }
         }
     }
 }
+
