--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,34 @@
+@import url("https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700|Montserrat:400,700");
+footer {
+  display: flex;
+  width: 100%;
+  height: 100px;
+  background: #3c3c3c;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end; }
+  footer ul {
+    list-style: none;
+    display: flex;
+    justify-content: flex-end; }
+    footer ul li {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-left: 15px;
+      width: 60px;
+      height: 60px;
+      border-radius: 30px;
+      text-align: center; }
+      footer ul li a {
+        padding: 10px;
+        font-size: 30px;
+        color: #f5f5f5;
+        transition: 0.3s; }
+        footer ul li a:hover {
+          color: #c1839f;
+          transform: scale(1.2); }
+
 .wrapper {
   width: 80%;
   margin: 0 auto;
@@ -35,30 +66,3 @@
     margin: 0;
     font-size: 2.5em;
     padding-top: 150px; }
-
-footer {
-  width: 100%;
-  height: 100px;
-  background: #444;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-end; }
-  footer ul {
-    list-style: none;
-    display: flex;
-    justify-content: flex-end; }
-    footer ul li {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-left: 15px;
-      width: 60px;
-      height: 60px;
-      border-radius: 30px;
-      background: grey;
-      text-align: center; }
-      footer ul li a {
-        padding: 10px;
-        font-size: 30px;
-        color: white; }
