--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,15 +1,9 @@
 @import './base/variables.scss';
 @import './base/mixins.scss';
-
+@import '.base/general.scss';
 
 @import './components/footer.scss';
 
-
-.wrapper {
-    width: 80%;
-    margin: 0 auto;
-    max-width: 1000px;
-}
 
 .nav-bar {
     width: 100%;
@@ -55,30 +49,4 @@
 }
 
 
-///// Mix-ins /////
-//-- Takes in the gradient's degree, the percentage of the background image where
-// the gradient starts, the start color and the end color; the URL comes first
-@mixin complexBGImage($url, $deg, $start, $color1, $color2) {
-    background: 
-        linear-gradient($deg, $color1 $start, $color2),
-        url($url);
-        background-size: cover;
-        background-position: center;
-}
 
-//-- Just take in the URL, no gradient effect
-@mixin simpleBGImage($url){
-    background: 
-        url($url);
-        background-size: cover;
-        background-position: center;
-}
-
-//-- Take in a URL and start and end colors, with gradient goes from top to bottom
-@mixin normalBGImage($url, $color1, $color2){
-    background: 
-        linear-gradient(180deg, $color1, $color2),
-        url($url);
-        background-size: cover;
-        background-position: center;
-}
