--- a/sass/app.scss
+++ b/sass/app.scss
@@ -3,6 +3,7 @@
 @import './base/general.scss';
 
 @import './components/employee-card.scss';
+@import './components/card.scss';
 @import './components/footer.scss';
 
 .nav-bar {
