--- a/css/app.css
+++ b/css/app.css
@@ -7,6 +7,47 @@
   margin: 0 auto;
   max-width: 1000px; }
 
+.smaller-header {
+  width: 100%;
+  height: 400px;
+  background: #087e8b; }
+  .smaller-header h1 {
+    margin: 0;
+    font-size: 2.5em;
+    padding-top: 150px; }
+
+.smaller-header {
+  height: 250px; }
+  .smaller-header h1 {
+    padding-top: 100px; }
+
+article {
+  padding: 30px, 20px; }
+
+.nav-bar {
+  width: 100%;
+  height: 100px;
+  background: #444;
+  display: flex;
+  flex-direction: row;
+  align-items: center; }
+
+.nav-logo {
+  width: 60px;
+  height: 60px;
+  margin-left: 60px;
+  margin-right: auto;
+  border-radius: 30px;
+  background: grey; }
+
+.nav-links {
+  margin-right: 60px;
+  align-self: center; }
+  .nav-links a {
+    font-size: 1.1em;
+    text-decoration: none;
+    color: white; }
+
 .employee-card {
   display: flex;
   align-items: center;
@@ -160,41 +201,3 @@ footer {
         footer ul li a:hover {
           color: #c1839f;
           transform: scale(1.2); }
-
-.nav-bar {
-  width: 100%;
-  height: 100px;
-  background: #444;
-  display: flex;
-  flex-direction: row;
-  align-items: center; }
-
-.nav-logo {
-  width: 60px;
-  height: 60px;
-  margin-left: 60px;
-  margin-right: auto;
-  border-radius: 30px;
-  background: grey; }
-
-.nav-links {
-  margin-right: 60px;
-  align-self: center; }
-  .nav-links a {
-    font-size: 1.1em;
-    text-decoration: none;
-    color: white; }
-
-.main-site-header, .smaller-header {
-  width: 100%;
-  height: 400px;
-  background: lightgrey; }
-  .main-site-header h1, .smaller-header h1 {
-    margin: 0;
-    font-size: 2.5em;
-    padding-top: 150px; }
-
-.smaller-header {
-  height: 250px; }
-  .smaller-header h1 {
-    padding-top: 100px; }
