--- a/css/app.css
+++ b/css/app.css
@@ -76,7 +76,8 @@
   margin: 20px; }
 
 /*************************
-index page
+index page   
+photos: Unsplash 
 **************************/
 .box,
 .blog-name,
@@ -91,7 +92,6 @@ index page
   width: 216px;
   border: 1px solid #EEEEEE;
   height: 215px;
-  background: red;
   margin-right: 40px; }
 
 .blog-content {
@@ -120,16 +120,10 @@ index page
   text-decoration: none;
   color: black; }
 
-/*************************
-About page
-**************************/
-.about-page .box img {
-  width: 216px;
-  height: 215px; }
-
-.about-page .main-site-header {
-  background-image: url("../img/about-hero.jpg");
-  background-position: 40% 15%; }
+.blog-content {
+  margin-top: 18px;
+  margin-bottom: 10px;
+  background-color: #F5F5F5; }
 
 footer {
   display: flex;
