Revert "Lucia branch2"

--- a/css/app.css
+++ b/css/app.css
@@ -117,8 +117,7 @@ article {
   margin: 20px; }
 
 /*************************
-index page   
-photos: Unsplash 
+index page
 **************************/
 .box,
 .blog-name,
@@ -133,6 +132,7 @@ photos: Unsplash
   width: 216px;
   border: 1px solid #EEEEEE;
   height: 215px;
+  background: red;
   margin-right: 40px; }
 
 .blog-content {
@@ -160,6 +160,17 @@ photos: Unsplash
 .blog-name a {
   text-decoration: none;
   color: black; }
+
+/*************************
+About page
+**************************/
+.about-page .box img {
+  width: 216px;
+  height: 215px; }
+
+.about-page .main-site-header {
+  background-image: url("../img/about-hero.jpg");
+  background-position: 40% 15%; }
 
 footer {
   display: flex;
