--- a/sass/app.scss
+++ b/sass/app.scss
@@ -3,6 +3,7 @@
 @import './base/general.scss';
 
 @import './pages/entry.scss';
+@import './pages/about.scss';
 @import './components/nav.scss';
 @import './components/employee-card.scss';
 @import './components/card.scss';
