--- a/sass/components/nav.scss
+++ b/sass/components/nav.scss
@@ -1,7 +1,7 @@
 .nav-bar {
     width: 100%;
     height: 100px;
-    background: #444;
+    background: $primary-color;
 
     display: flex;
     flex-direction: row;
@@ -9,14 +9,25 @@
 }
 
 .nav-logo {
-    width: 60px;
-    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80px;
+    height: 80px;
     margin-left: 60px;
     margin-right: auto;
-    border-radius: 30px;
+    border-radius: 50%;
+    background: $background-color;
 
-    background: grey;
+    a {
+        color: $secondary-color;
+
+        &:hover {
+            color: $accent-color;
+        }
+    }
 }
+
 
 .nav-links {
     margin-right: 60px;
