--- a/css/app.css
+++ b/css/app.css
@@ -120,6 +120,10 @@ article {
 index page   
 photos: Unsplash 
 **************************/
+.header {
+  width: 100%;
+  height: 600px; }
+
 .box,
 .blog-name,
 .blog-content {
@@ -140,7 +144,8 @@ photos: Unsplash
   justify-content: center; }
   .blog-content p {
     color: #3C3C3C;
-    font-size: 19px; }
+    font-size: 19px;
+    font-family: 'Libre Baskerville'; }
 
 .blog-name {
   width: 60%;
@@ -156,7 +161,8 @@ photos: Unsplash
 
 .blog-name h2 {
   font-size: 40px;
-  font-weight: bold; }
+  font-weight: bold;
+  font-family: 'Libre Montserrat'; }
 
 .box a,
 .blog-name a {
@@ -192,3 +198,27 @@ footer {
         footer ul li a:hover {
           color: #c1839f;
           transform: scale(1.2); }
+
+.main-site-header {
+  width: 100%;
+  height: 400px;
+  background: url("../assets/img/blog-hero.jpg");
+  background-size: cover;
+  background-position: center; }
+  .main-site-header h1 {
+    margin-top: 0;
+    padding-top: 150px; }
+
+.about-header {
+  width: 100%;
+  height: 300px;
+  background: url("../assets/img/about-hero.jpg");
+  background-size: cover;
+  background-position: center;
+  background-position: 100% 30%; }
+  .about-header h1 {
+    color: #087e8b;
+    background: white;
+    display: inline-block;
+    margin-top: 150px;
+    padding: 0 10px; }
