--- a/sass/app.scss
+++ b/sass/app.scss
@@ -7,6 +7,7 @@
 @import './components/employee-card.scss';
 @import './components/card.scss';
 @import './components/footer.scss';
+@import './components/header.scss';
 
 
 
