--- a/css/app.css
+++ b/css/app.css
@@ -198,13 +198,13 @@ footer {
           color: #c1839f;
           transform: scale(1.2); }
 
-.main-site-header {
+.index-header {
   width: 100%;
   height: 400px;
   background: url("../assets/img/blog-hero.jpg");
   background-size: cover;
   background-position: center; }
-  .main-site-header h1 {
+  .index-header h1 {
     margin-top: 0;
     padding-top: 150px; }
 
@@ -221,3 +221,6 @@ footer {
     display: inline-block;
     margin-top: 150px;
     padding: 0 10px; }
+
+.index-header h1 {
+  color: #087e8b; }
