--- a/sass/app.scss
+++ b/sass/app.scss
@@ -2,10 +2,28 @@
 @import './base/mixins.scss';
 @import './base/general.scss';
 
-@import './pages/entry.scss';
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @import './components/employee-card.scss';
 @import './components/card.scss';
 @import './components/footer.scss';
+
+//@import './pages/test.scss';
+
+@import './pages/entry.scss';
 
 .nav-bar {
     width: 100%;
