--- a/css/app.css
+++ b/css/app.css
@@ -161,6 +161,35 @@ footer {
           color: #c1839f;
           transform: scale(1.2); }
 
+.smaller-header-1, .smaller-header-2, .smaller-header-3 {
+  width: 100%;
+  height: 400px; }
+  .smaller-header-1 h1, .smaller-header-2 h1, .smaller-header-3 h1 {
+    margin: 0;
+    font-size: 2.5em; }
+
+.smaller-header-1, .smaller-header-2, .smaller-header-3 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  height: 250px; }
+
+.smaller-header-1 {
+  background: url(https://images.unsplash.com/photo-1504164996022-09080787b6b3?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b237330e1a78d52ec28208cbe21be778&auto=format&fit=crop&w=1650&q=80); }
+
+.smaller-header-2 {
+  background: url("../assets/img/blog2.jpg");
+  background-position: center; }
+
+.smaller-header-3 {
+  background: url("../assets/img/blog3.jpg");
+  background-position: center; }
+
+article {
+  padding: 150px;
+  font-family: "Libre Baskerville", serif; }
+
 .nav-bar {
   width: 100%;
   height: 100px;
@@ -184,17 +213,3 @@ footer {
     font-size: 1.1em;
     text-decoration: none;
     color: white; }
-
-.main-site-header, .smaller-header {
-  width: 100%;
-  height: 400px;
-  background: lightgrey; }
-  .main-site-header h1, .smaller-header h1 {
-    margin: 0;
-    font-size: 2.5em;
-    padding-top: 150px; }
-
-.smaller-header {
-  height: 250px; }
-  .smaller-header h1 {
-    padding-top: 100px; }
