--- a/sass/components/nav.scss
+++ b/sass/components/nav.scss
@@ -1,21 +1,46 @@
 .nav-bar {
     width: 100%;
     height: 100px;
-    background: #444;
-
+    background: $primary-color;
+    color: $background-color;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    font-family: $heading-font;
+    font-weight: bold;
+    font-size: 1.3em;
+}
+
+.nav-brand {
+    display: flex;
     align-items: center;
 }
 
 .nav-logo {
-    width: 60px;
-    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80px;
+    height: 80px;
     margin-left: 60px;
     margin-right: auto;
-    border-radius: 30px;
+    border-radius: 50%;
+    border: 1px solid $text-color;
+    background: $background-color;
 
-    background: grey;
+    a {
+        color: $text-color;
+    }
+}
+
+.nav-brand-name {
+    padding: 0 20px;
+
+    a {
+        text-decoration: none;
+        color: $background-color;
+    }
 }
 
 .nav-links {
@@ -25,6 +50,13 @@
     a {
         font-size: 1.1em;
         text-decoration: none;
-        color: white;
+        color: $background-color;
+        transition: 0.4s;
+
+        &:hover {
+            border-top: 2px solid $background-color;
+            border-bottom: 2px solid $background-color;
+        }
     }
 }
+
