--- a/css/app.css
+++ b/css/app.css
@@ -219,6 +219,12 @@ footer {
           color: #c1839f;
           transform: scale(1.2); }
 
+.index-header h1, .about-header h1 {
+  margin-top: 150px;
+  padding: 0 15px;
+  font-size: 46px;
+  display: inline-block; }
+
 .index-header {
   width: 100%;
   height: 400px;
@@ -226,22 +232,14 @@ footer {
   background-size: cover;
   background-position: center; }
   .index-header h1 {
-    margin-top: 0;
-    padding-top: 150px; }
+    color: #087e8b; }
 
 .about-header {
   width: 100%;
   height: 300px;
-  background: url("../assets/img/about-hero.jpg");
+  background: linear-gradient(180deg, transparent, #3c3c3c), url("../assets/img/about-hero.jpg");
   background-size: cover;
-  background-position: center;
   background-position: 100% 30%; }
   .about-header h1 {
-    color: #087e8b;
-    background: white;
-    display: inline-block;
-    margin-top: 150px;
-    padding: 0 10px; }
-
-.index-header h1 {
-  color: #087e8b; }
+    text-shadow: 1px 1px 2px #087e8b;
+    color: #f5f5f5; }
