--- a/css/app.css
+++ b/css/app.css
@@ -27,14 +27,13 @@ article {
 .nav-bar {
   width: 100%;
   height: 100px;
-  background: #087e8b;
+  background-image: linear-gradient(to right, #087e8b 55%, #c1839f, #ff5a5f);
   color: #f5f5f5;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   font-family: "Montserrat", sans-serif;
-  font-weight: bold;
   font-size: 1.3em; }
   .nav-bar .nav-brand {
     display: flex;
