--- a/sass/components/nav.scss
+++ b/sass/components/nav.scss
@@ -1,14 +1,13 @@
 .nav-bar {
     width: 100%;
     height: 100px;
-    background: $primary-color;
+    background-image: linear-gradient(to right, $primary-color 55%, $accent-color, $secondary-color);
     color: $background-color;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     font-family: $heading-font;
-    font-weight: bold;
     font-size: 1.3em;
 
     .nav-brand {
