--- a/sass/components/card.scss
+++ b/sass/components/card.scss
@@ -41,7 +41,8 @@ photos: Unsplash
 .blog-name {    
     width: 60%;
     min-width: 230px;
-    height: 215px;
+    margin-bottom: 50px;
+
 }
 
 .blog-name h2,
