--- a/sass/components/card.scss
+++ b/sass/components/card.scss
@@ -56,7 +56,7 @@ photos: Unsplash
 .blog-name h2 {
     font-size: 40px;
     font-weight: bold;
-    font-family: 'Libre Montserrat';
+    font-family: $heading-font;
     
 }
 
