space between lines Home page for mobile version

--- a/sass/components/card.scss
+++ b/sass/components/card.scss
@@ -48,7 +48,7 @@ photos: Unsplash
 .blog-name h2,
     .blog-name h3,
     .blog-name p {
-    margin: 0;
+    margin: 10px 0;
     padding: 0;
     width: 100%;
 }
