use  variable  for font-family  and color- Home Page  (card)

--- a/css/app.css
+++ b/css/app.css
@@ -159,9 +159,9 @@ photos: Unsplash
   display: flex;
   justify-content: center; }
   .blog-content p {
-    color: #3C3C3C;
+    color: #3c3c3c;
     font-size: 19px;
-    font-family: 'Libre Baskerville'; }
+    font-family: "Libre Baskerville", serif; }
 
 .blog-name {
   width: 60%;
@@ -178,7 +178,7 @@ photos: Unsplash
 .blog-name h2 {
   font-size: 40px;
   font-weight: bold;
-  font-family: 'Libre Montserrat'; }
+  font-family: "Montserrat", sans-serif; }
 
 .box a,
 .blog-name a {
