--- a/sass/components/card.scss
+++ b/sass/components/card.scss
@@ -31,9 +31,9 @@ photos: Unsplash
    
 
     p {
-        color: #3C3C3C;
+        color: $text-color;
         font-size: 19px;
-        font-family: 'Libre Baskerville';
+        font-family: $p-font;
        
     }
 }
@@ -56,14 +56,14 @@ photos: Unsplash
 .blog-name h2 {
     font-size: 40px;
     font-weight: bold;
-    font-family: 'Libre Montserrat';
+    font-family: $heading-font;
     
 }
 
 .box a,
     .blog-name a {
     text-decoration: none;
-    color: #ff5a5f;
+    color: $secondary-color;
 }
 
 h1 {
