--- a/css/app.css
+++ b/css/app.css
@@ -7,22 +7,42 @@
   margin: 0 auto;
   max-width: 1000px; }
 
-.smaller-header {
+.smaller-header-1, .smaller-header-2, .smaller-header-3 {
   width: 100%;
   height: 400px;
   background: #087e8b; }
-  .smaller-header h1 {
+  .smaller-header-1 h1, .smaller-header-2 h1, .smaller-header-3 h1 {
     margin: 0;
-    font-size: 2.5em;
-    padding-top: 150px; }
+    font-size: 2.5em; }
 
-.smaller-header {
+.smaller-header-1, .smaller-header-2, .smaller-header-3 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
   height: 250px; }
-  .smaller-header h1 {
-    padding-top: 100px; }
+  .smaller-header-1 a, .smaller-header-2 a, .smaller-header-3 a, .smaller-header-1 h1, .smaller-header-2 h1, .smaller-header-3 h1, .smaller-header-1 p, .smaller-header-2 p, .smaller-header-3 p {
+    color: white; }
+
+.smaller-header-1 {
+  background: linear-gradient(90deg, black, transparent), url("../assets/img/blog1hero.jpg");
+  background-size: cover;
+  background-position: center; }
+
+.smaller-header-2 {
+  background: linear-gradient(90deg, black, transparent), url("../assets/img/blog2hero.jpg");
+  background-size: cover;
+  background-position: center; }
+
+.smaller-header-3 {
+  background: linear-gradient(90deg, black, transparent), url("../assets/img/blog3hero.jpg");
+  background-size: cover;
+  background-position: center; }
 
 article {
-  padding: 30px, 20px; }
+  padding-top: 100px;
+  padding-bottom: 100px;
+  font-family: "Libre Baskerville", serif; }
 
 .nav-bar {
   width: 100%;
