--- a/sass/components/nav.scss
+++ b/sass/components/nav.scss
@@ -23,11 +23,10 @@
             margin-left: 60px;
             margin-right: auto;
             border-radius: 50%;
-            border: 1px solid $text-color;
-            background: $background-color;
-        
+            border: 1px solid $background-color;
+
             a {
-                color: $text-color;
+                color: $background-color;
             }
         }
 
