--- a/sass/pages/entry.scss
+++ b/sass/pages/entry.scss
@@ -2,11 +2,11 @@
     width: 100%;
     height: 400px;
     background: $primary-color;
+    font-family: $heading-font;
 
     h1 {
         margin: 0;
         font-size: 2.5em;
-        // padding-top: 150px;
     }
 }
 
