--- a/css/app.css
+++ b/css/app.css
@@ -10,6 +10,14 @@
 p {
   line-height: 1.6; }
 
+.about {
+  margin-top: 80px;
+  margin-bottom: 100px; }
+
+.wrapper .blog-content {
+  margin-top: 100px;
+  margin-bottom: 100px; }
+
 .smaller-header-1, .smaller-header-2, .smaller-header-3 {
   width: 100%;
   height: 400px;
