--- a/sass/base/general.scss
+++ b/sass/base/general.scss
@@ -12,3 +12,13 @@
 p {
     line-height: 1.6;
 }
+
+.about {
+    margin-top: 80px;
+    margin-bottom: 100px;
+}
+
+.wrapper .blog-content {
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
