--- a/sass/components/nav.scss
+++ b/sass/components/nav.scss
@@ -30,14 +30,23 @@
                     font-size: 2em;
                 }
             }
+
+            @media screen and (max-width: 370px) {
+                margin-left: 10px;
+            }
         }
 
         .nav-brand-name {
-            padding: 0 20px;
+            padding-left: 20px;
         
             a {
                 text-decoration: none;
                 color: $background-color;
+            }
+
+            @media screen and (max-width: 370px) {
+                display: none;
+                
             }
         }
     }
@@ -57,8 +66,14 @@
                 border-bottom: 2px solid $background-color;
             }
         }
+    } 
+    
+    @media screen and (max-width: 370px) {
+        font-size: 1.1em;       
     }
 }
+
+
 
 
 
