--- a/css/app.css
+++ b/css/app.css
@@ -108,14 +108,16 @@ article {
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  width: 100%; }
+  width: 100%;
+  margin-bottom: 25px; }
   .card .img {
     height: 200px;
     width: 200px;
     margin: 20px; }
     .card .img img {
       height: 100%;
-      width: 100%; }
+      width: 100%;
+      object-fit: cover; }
   .card a {
     text-decoration: none;
     color: #ff5a5f; }
@@ -225,7 +227,8 @@ footer {
   height: 400px;
   background: url("../assets/img/blog-hero.jpg");
   background-size: cover;
-  background-position: center; }
+  background-position: center;
+  background-position: 75% 50%; }
   .index-header h1 {
     color: #087e8b; }
   .index-header h2, .index-header h3 {
@@ -241,7 +244,7 @@ footer {
   height: 300px;
   background: linear-gradient(180deg, transparent, #3c3c3c), url("../assets/img/about-hero.jpg");
   background-size: cover;
-  background-position: 100% 30%; }
+  background-position: 40% 30%; }
   .about-header h1 {
     text-shadow: 1px 1px 2px #087e8b;
     color: #f5f5f5; }
