--- a/sass/base/general.scss
+++ b/sass/base/general.scss
@@ -2,18 +2,18 @@
     box-sizing: border-box;
 }
 
+p {
+    line-height: 1.6;
+}
 
 .wrapper {
     width: 80%;
     margin: 0 auto;
     max-width: 1000px;
+
+    .blog-content {
+        margin-top: 80px;
+        margin-bottom: 100px;
+    }
 }
 
-p {
-    line-height: 1.6;
-}
-
-.wrapper .blog-content {
-    margin-top: 80px;
-    margin-bottom: 100px;
-}
